# newland

./: .clang-format  CMakeLists.txt  Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  Gameplay.cpp  Gameplay.hpp  GameplayInfo.cpp  GameplayInfo.hpp  Inventory.cpp  Inventory.hpp  Location.cpp  Location.hpp  Main.cpp  Maps.cpp  Maps.hpp  Npc.cpp  Npc.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  README.md  Sound.cpp  Sound.hpp  UserInterface.cpp  UserInterface.hpp  format.py
libraries/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  Chronometer.hpp
newland/: Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  Gameplay.cpp  Gameplay.hpp  GameplayInfo.cpp  GameplayInfo.hpp  Inventory.cpp  Inventory.hpp  Location.cpp  Location.hpp  Main.cpp  Maps.cpp  Maps.hpp  Npc.cpp  Npc.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  Sound.cpp  Sound.hpp  UserInterface.cpp  UserInterface.hpp
resources/: handlarz.npc  jagoda.npc  kaplan.npc  kenyan.npc  klient.npc  kucharz.npc  mieszkaniec1.npc  mieszkaniec2.npc  mieszkaniec3.npc  nietoperz.npc  ogien.ani  roza.npc  straznik.npc  stroz1.npc  stroz2.npc  szkielet.enm  torch.ani  water.glsl  woda.ani  wygnaniec.npc  zabojca.npc  znachorka.npc  znicz.ani
source/: Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  Gameplay.cpp  Gameplay.hpp  GameplayInfo.cpp  GameplayInfo.hpp  (+17 more)
(+11 files in other folders)
